# wgdtree

./: README.md  ete3.citation  pyproject.toml  setup.cfg  small.newick
example_trees/: balanced.newick  caterpillar.newick  small.newick  tree0.newick  tree1.newick  tree2.newick  tree3.newick  tree4.newick
example_trees/real_world_data/: batch.txt  bi_plants.newick  makebatch  tree10.newick  tree100.newick  tree1000.newick  tree1001.newick  tree1002.newick  tree1003.newick  tree1004.newick  tree1005.newick  tree1006.newick  tree1007.newick  tree1008.newick  tree1009.newick  tree101.newick  tree1010.newick  tree1011.newick  tree1012.newick  tree1013.newick  tree1014.newick  tree1015.newick  tree1016.newick  tree1017.newick  tree1018.newick  tree1019.newick  tree102.newick  tree1020.newick  tree1021.newick  tree1022.newick  tree1023.newick  tree1024.newick  tree1025.newick  tree1026.newick  tree1027.newick  tree1028.newick  tree1029.newick  tree103.newick  tree1030.newick  tree1031.newick  (+5698 more)
src/wgdtree/: __init__.py  batch_run.py  retention_rates.py  root.py  rooting.py  rrate.py  sim.py  simulation.py  split_it.py
src/wgdtree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_data/: small.newick
test_data/raw_sim/: tree0.newick  tree1.newick  tree10.newick  tree11.newick  tree12.newick  tree13.newick  tree14.newick  tree15.newick  tree16.newick  (+91 more)
tests/: .directory  compare1.py  compare2.py  event120_event70.newick  event150_event120.newick  event150_event70.newick  event150_event75.newick  event150_event76.newick  main_test.py  pkg_test.py  real.sh  real_test.py
(+1307 files in other folders)
