[metadata]
name = wgdtree
version = 0.0.1
author = Charles Henry
author_email = Charlesnhenry@gmail.com
description = A small package for simulating and analysing phylo-genetic trees.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cnickh/wgdtree
project_urls =
    Bug Tracker = https://github.com/cnickh/wgdtree/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
